--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "formidable": "^3.5.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
     "@types/node": "^20",
